Fix parallax image size on mobile

--- a/style.css
+++ b/style.css
@@ -694,6 +694,15 @@ a {
 
 /* #endregion */
 
+/* #region simpleParallax */
+
+.simpleParallax {
+  width: 100%;
+  height: 100%;
+}
+
+/* #endregion */
+
 /* #region Breakpoints */
 
 @media (min-width: 576px) {
